@@ -15,6 +15,8 @@ debhelper (13.0.1) UNRELEASED; urgency=medium
     folded in d/control.  Thanks to Thorsten Glaser for reporting
     the issue.  (Closes: #958987)
   * SequencerUtil.pm: Fix use of uninitialized variable warning.
+  * Dh_Lib.pm: Properly error out on paragraphs missing the Package
+    field (rather than silently ignoring them).
 
   [ Translations ]
   * Fix typo in German translation.  (Andreas Bombe)
